Add codecov and badges

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
+sudo: false
 language: node_js
 node_js:
   - 8
 cache: yarn
 notifications:
   email: false
+after_success:
+  - yarn send-coverage
