--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "debug": "^3.1.0",
     "lodash": "^4.17.4",
     "openapi3-ts": "^0.6.2",
+    "path-to-regexp": "^2.1.0",
     "reflect-metadata": "^0.1.10",
     "routing-controllers": "^0.7.6",
     "tslib": "^1.8.0"
