--- a/package.json
+++ b/package.json
@@ -34,27 +34,27 @@
     "path-to-regexp": "^2.2.1",
     "reflect-metadata": "^0.1.12",
     "routing-controllers": "^0.7.7",
-    "tslib": "^1.9.2"
+    "tslib": "^1.9.3"
   },
   "devDependencies": {
     "@types/debug": "^0.0.30",
-    "@types/jest": "^23.1.0",
-    "@types/lodash": "^4.14.109",
-    "@types/node": "^10.3.3",
-    "@types/prettier": "^1.13.1",
+    "@types/jest": "^23.3.1",
+    "@types/lodash": "^4.14.116",
+    "@types/node": "^10.5.8",
+    "@types/prettier": "^1.13.2",
     "@types/reflect-metadata": "^0.1.0",
     "@types/rimraf": "^2.0.2",
     "class-validator": "^0.8.5",
     "class-validator-jsonschema": "^1.1.1",
-    "codecov": "^3.0.2",
-    "jest": "^23.1.0",
-    "prettier": "1.13.5",
+    "codecov": "^3.0.4",
+    "jest": "^23.5.0",
+    "prettier": "^1.14.2",
     "rimraf": "^2.6.2",
-    "ts-jest": "^22.4.6",
-    "tslint": "^5.10.0",
-    "tslint-config-prettier": "^1.13.0",
-    "tslint-config-standard": "^7.0.0",
-    "tsutils": "^2.27.1",
-    "typescript": "^2.9.2"
+    "ts-jest": "^23.1.3",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.14.0",
+    "tslint-config-standard": "^7.1.0",
+    "tsutils": "^3.0.0",
+    "typescript": "^3.0.1"
   }
 }
