--- a/sample/01-basic/package.json
+++ b/sample/01-basic/package.json
@@ -13,16 +13,16 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "class-validator": "0.8.5",
-    "class-validator-jsonschema": "^1.1.3",
+    "class-validator": "^0.9.1",
+    "class-validator-jsonschema": "^1.2.0",
     "express": "^4.16.3",
-    "reflect-metadata": "^0.1.12",
+    "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.7.7",
     "routing-controllers-openapi": "../.."
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
     "nodemon": "^1.18.3",
-    "typescript": "^3.0.1"
+    "typescript": "^3.3.3"
   }
 }
