--- a/package.json
+++ b/package.json
@@ -44,8 +44,9 @@
     "@types/prettier": "^1.13.2",
     "@types/reflect-metadata": "^0.1.0",
     "@types/rimraf": "^2.0.2",
+    "class-transformer": "^0.2.3",
     "class-validator": "^0.8.5",
-    "class-validator-jsonschema": "^1.1.3",
+    "class-validator-jsonschema": "^1.3.0",
     "codecov": "^3.0.4",
     "jest": "^23.5.0",
     "prettier": "^1.14.2",
