--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "clean": "rimraf coverage build",
     "build": "yarn clean && tsc -p tsconfig.release.json",
     "format": "prettier --write {src,test}/**/*.ts",
-    "lint": "tslint --project . --type-check src/**/*.ts",
+    "lint": "tslint --project . src/**/*.ts",
     "prepare": "yarn build",
     "send-coverage": "codecov -f coverage/*.json",
     "test": "jest --coverage",
@@ -37,25 +37,25 @@
     "tslib": "^1.9.3"
   },
   "devDependencies": {
-    "@types/debug": "^0.0.30",
-    "@types/jest": "^23.3.1",
-    "@types/lodash": "^4.14.116",
-    "@types/node": "^10.5.8",
-    "@types/prettier": "^1.13.2",
+    "@types/debug": "^4.1.4",
+    "@types/jest": "^24.0.15",
+    "@types/lodash": "^4.14.136",
+    "@types/node": "^12.6.2",
+    "@types/prettier": "^1.16.4",
     "@types/reflect-metadata": "^0.1.0",
     "@types/rimraf": "^2.0.2",
     "class-transformer": "^0.2.3",
-    "class-validator": "^0.8.5",
+    "class-validator": "^0.9.1",
     "class-validator-jsonschema": "^1.3.0",
-    "codecov": "^3.0.4",
-    "jest": "^23.5.0",
-    "prettier": "^1.14.2",
-    "rimraf": "^2.6.2",
-    "ts-jest": "^23.1.3",
-    "tslint": "^5.12.1",
+    "codecov": "^3.5.0",
+    "jest": "^24.8.0",
+    "prettier": "^1.18.2",
+    "rimraf": "^2.6.3",
+    "ts-jest": "^24.0.2",
+    "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^8.0.1",
-    "tsutils": "^3.0.0",
-    "typescript": "^3.3.1"
+    "tsutils": "^3.14.0",
+    "typescript": "^3.5.3"
   }
 }
