--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "lodash": "^4.17.15",
     "openapi3-ts": "^1.3.0",
     "path-to-regexp": "^2.2.1",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "tslib": "^1.11.1"
   },
   "devDependencies": {
     "@team-griffin/install-self-peers": "^1.1.1",
