Prevent `yarn prepare` from changing lockfile

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "yarn clean && tsc -p tsconfig.release.json",
     "format": "prettier --write {src,test}/**/*.ts",
     "lint": "tslint --project . src/**/*.ts",
-    "prepare": "install-self-peers -- --ignore-scripts && yarn build",
+    "prepare": "install-self-peers -- --frozen-lockfile --ignore-scripts && yarn build",
     "send-coverage": "codecov -f coverage/*.json",
     "test": "jest --coverage",
     "test:watch": "jest --watch"
