Upgrade to class-validator v0.12

--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "@types/reflect-metadata": "^0.1.0",
     "@types/rimraf": "^2.0.3",
     "class-transformer": "^0.2.3",
-    "class-validator": "^0.11.0",
-    "class-validator-jsonschema": "^1.3.0",
+    "class-validator": "^0.12.2",
+    "class-validator-jsonschema": "^2.0.0-rc1",
     "codecov": "^3.6.1",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
