--- a/sample/01-basic/package.json
+++ b/sample/01-basic/package.json
@@ -13,11 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "class-validator": "^0.11.0",
-    "class-validator-jsonschema": "^1.3.0",
+    "class-validator": "^0.12.2",
+    "class-validator-jsonschema": "^2.0.0-rc1",
     "express": "^4.16.3",
     "reflect-metadata": "^0.1.13",
-    "routing-controllers": "^0.8.0",
+    "routing-controllers": "^0.8.1",
     "routing-controllers-openapi": "../.."
   },
   "devDependencies": {
