--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "routing-controllers-openapi",
-  "version": "2.0.0-rc1",
+  "version": "2.0.0",
   "description": "Runtime OpenAPI v3 spec generation for routing-controllers",
   "keywords": [
     "routing-controllers",
