--- a/sample/01-basic/package.json
+++ b/sample/01-basic/package.json
@@ -18,10 +18,12 @@
     "express": "^4.16.3",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.8.1",
-    "routing-controllers-openapi": "../.."
+    "routing-controllers-openapi": "../..",
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
+    "@types/swagger-ui-express": "^4.1.2",
     "nodemon": "^1.18.3",
     "typescript": "^3.3.3"
   }
