--- a/sample/01-basic/package.json
+++ b/sample/01-basic/package.json
@@ -15,14 +15,15 @@
     "body-parser": "^1.18.3",
     "class-validator": "^0.12.2",
     "class-validator-jsonschema": "^2.0.0-rc1",
-    "express": "^4.16.3",
+    "express": "^4.17.1",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.8.1",
     "routing-controllers-openapi": "../..",
     "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
-    "@types/express": "^4.16.0",
+    "@types/express": "^4.17.6",
+    "@types/express-serve-static-core": "~4.17.7",
     "@types/swagger-ui-express": "^4.1.2",
     "nodemon": "^1.18.3",
     "typescript": "^3.3.3"
