--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   "license": "MIT",
   "scripts": {
     "clean": "rimraf coverage build",
-    "build": "yarn clean && tsc -p tsconfig.release.json",
+    "build": "npm run clean && tsc -p tsconfig.release.json",
     "format": "prettier --write {src,test}/**/*.ts",
     "test:format": "prettier --check {src,test}/**/*.ts",
-    "lint": "tslint --project . src/**/*.ts",
-    "prepare": "install-self-peers -- --frozen-lockfile --ignore-scripts && yarn build",
+    "test:lint": "tslint --project . src/**/*.ts",
+    "prepare": "install-self-peers --npm -- --no-save --ignore-scripts && npm run build",
     "send-coverage": "codecov -f coverage/*.json",
     "test": "jest --coverage",
     "test:watch": "jest --watch"
