--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@types/prettier": "^2.2.2",
     "@types/reflect-metadata": "^0.1.0",
     "@types/rimraf": "^3.0.0",
-    "class-transformer": "0.3.1",
+    "class-transformer": "^0.4.0",
     "class-validator": "^0.12.2",
     "class-validator-jsonschema": "^2.2.0",
     "codecov": "^3.8.1",
@@ -57,6 +57,6 @@
     "typescript": "^4.2.3"
   },
   "peerDependencies": {
-    "routing-controllers": "^0.8.0"
+    "routing-controllers": "^0.9.0"
   }
 }
