--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@types/rimraf": "^3.0.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.12.2",
-    "class-validator-jsonschema": "^2.2.0",
+    "class-validator-jsonschema": "^2.0.0-rc1",
     "codecov": "^3.6.1",
     "jest": "^25.5.3",
     "prettier": "^2.0.5",
