--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,7 @@
     "noFallthroughCasesInSwitch": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "allowSyntheticDefaultImports": true,
-    "allowJs": true
+    "noUnusedParameters": true
   },
   "include": [
     "src/**/*",
