--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
     "@types/prettier": "^2.0.0",
     "@types/reflect-metadata": "^0.1.0",
     "@types/rimraf": "^3.0.0",
-    "class-transformer": "^0.4.0",
+    "class-transformer": "0.3.1",
     "class-validator": "^0.12.2",
-    "class-validator-jsonschema": "^2.0.0-rc1",
+    "class-validator-jsonschema": "2.1.1",
     "codecov": "^3.6.1",
     "jest": "^25.5.3",
     "prettier": "^2.0.5",
