--- a/package.json
+++ b/package.json
@@ -30,31 +30,31 @@
   },
   "dependencies": {
     "lodash": "^4.17.15",
-    "openapi3-ts": "^1.3.0",
+    "openapi3-ts": "^2.0.1",
     "path-to-regexp": "^2.2.1",
     "reflect-metadata": "^0.1.13",
-    "tslib": "^1.11.1"
+    "tslib": "^2.1.0"
   },
   "devDependencies": {
     "@team-griffin/install-self-peers": "^1.1.1",
-    "@types/jest": "^25.2.1",
-    "@types/lodash": "^4.14.150",
-    "@types/node": "^13.13.4",
-    "@types/prettier": "^2.0.0",
+    "@types/jest": "^26.0.20",
+    "@types/lodash": "^4.14.168",
+    "@types/node": "^13.13.46",
+    "@types/prettier": "^2.2.2",
     "@types/reflect-metadata": "^0.1.0",
     "@types/rimraf": "^3.0.0",
-    "class-transformer": "^0.3.1",
+    "class-transformer": "0.3.1",
     "class-validator": "^0.12.2",
-    "class-validator-jsonschema": "^2.0.0-rc1",
-    "codecov": "^3.6.1",
-    "jest": "^25.5.3",
-    "prettier": "^2.0.5",
+    "class-validator-jsonschema": "^2.2.0",
+    "codecov": "^3.8.1",
+    "jest": "^26.6.3",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "^25.4.0",
-    "tslint": "^6.1.2",
+    "ts-jest": "^26.5.3",
+    "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^9.0.0",
-    "typescript": "^3.8.3"
+    "typescript": "^4.2.3"
   },
   "peerDependencies": {
     "routing-controllers": "^0.8.0"
