--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@types/rimraf": "^3.0.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
-    "class-validator-jsonschema": "^2.2.0",
+    "class-validator-jsonschema": "github:epiphone/class-validator-jsonschema#cad7de9",
     "codecov": "^3.8.1",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
