--- a/sample/01-basic/package.json
+++ b/sample/01-basic/package.json
@@ -15,7 +15,7 @@
     "body-parser": "^1.18.3",
     "class-transformer": "0.4.0",
     "class-validator": "0.13.1",
-    "class-validator-jsonschema": "github:epiphone/class-validator-jsonschema#cad7de9",
+    "class-validator-jsonschema": "^3.0.0",
     "express": "^4.17.1",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "0.9.0",
