--- a/sample/01-basic/package.json
+++ b/sample/01-basic/package.json
@@ -13,13 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "class-transformer": "^0.3.1",
-    "class-validator": "^0.12.2",
-    "class-validator-jsonschema": "^2.0.0-rc1",
+    "class-transformer": "0.4.0",
+    "class-validator": "0.13.1",
+    "class-validator-jsonschema": "^3.0.0",
     "express": "^4.17.1",
     "reflect-metadata": "^0.1.13",
-    "routing-controllers": "^0.8.1",
-    "routing-controllers-openapi": "../..",
+    "routing-controllers": "0.9.0",
+    "routing-controllers-openapi": "github:epiphone/routing-controllers-openapi#34ccc11",
     "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
@@ -27,6 +27,6 @@
     "@types/express-serve-static-core": "~4.17.7",
     "@types/swagger-ui-express": "^4.1.2",
     "nodemon": "^1.18.3",
-    "typescript": "^3.3.3"
+    "typescript": "^4.2.3"
   }
 }
