use alternatives to lodash

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     ],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
     "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
