--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "singleQuote": true
   },
   "dependencies": {
-    "lodash.merge": "^4.6.2",
+    "glob": "^7.1.7",
     "lodash.capitalize": "^4.2.1",
+    "lodash.merge": "^4.6.2",
     "lodash.startcase": "^4.4.0",
     "openapi3-ts": "^2.0.1",
     "path-to-regexp": "^2.2.1",
@@ -40,8 +41,8 @@
   "devDependencies": {
     "@team-griffin/install-self-peers": "^1.1.1",
     "@types/jest": "^26.0.20",
-    "@types/lodash.merge": "^4.6.6",
     "@types/lodash.capitalize": "^4.2.6",
+    "@types/lodash.merge": "^4.6.6",
     "@types/lodash.startcase": "^4.4.6",
     "@types/node": "^13.13.46",
     "@types/prettier": "^2.2.2",
@@ -54,6 +55,7 @@
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
+    "routing-controllers": "^0.9.0",
     "ts-jest": "^26.5.3",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
