--- a/package.json
+++ b/package.json
@@ -14,14 +14,13 @@
   "author": "Aleksi Pekkala <aleksipekkala@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "clean": "rimraf coverage build",
+    "clean": "rimraf build",
     "build": "npm run clean && tsc -p tsconfig.release.json",
     "format": "prettier --write {src,__tests__}/**/*.ts",
     "test:format": "prettier --check {src,__tests__}/**/*.ts",
     "test:lint": "tslint --project . src/**/*.ts",
     "prepare": "npm run build",
-    "send-coverage": "codecov -f coverage/*.json",
-    "test": "jest --coverage",
+    "test": "jest",
     "test:watch": "jest --watch"
   },
   "prettier": {
@@ -50,7 +49,6 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "class-validator-jsonschema": "^3.1.1",
-    "codecov": "^3.8.1",
     "jest": "^29.3.1",
     "prettier": "^2.8.0",
     "rimraf": "^3.0.2",
